scrollbar：fix

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -86,7 +86,7 @@ $bBlue:#6AC7E6;
  }
 }
 
-// 通用
+// 通用 --------------
 html,body{
   width: 100vw;
   height: 100vh;
@@ -97,6 +97,10 @@ html,body{
 #app{
   width: 100%;
   height: 100%;
+
+  #navbar{
+    z-index: 1;
+  }
 
   #footer{
     width: 100%;
